# Python-Automation

./: README.md  WebScrapper.py  pyproject.toml
PythonAutomationFoundations/AutomatingEmails/: PeriodicEmails.py  SendEmailToCsvList.py  SendSingleEmail.py
